--- a/src/App.css
+++ b/src/App.css
@@ -7,8 +7,8 @@ html, body {
 .App {
   background-color: rgb(240, 242, 245);
   text-align: center;
-  height: 100vh;
-  max-height: 100vh;
+  height: 120vh;
+  padding-bottom: 20vh;
   overflow-y: hidden;
   overflow-x: hidden;
 }
