--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,6 @@ html, body {
 .App {
   background-color: rgb(240, 242, 245);
   text-align: center;
-  height: 120vh;
   padding-bottom: 20vh;
   overflow-y: hidden;
   overflow-x: hidden;
@@ -15,6 +14,7 @@ html, body {
 
 @media screen and (max-width: 600px) {
   html, body, .App {
+    max-height: unset;
     overflow-y: scroll;
   }
 }
